tests/NormalTests/paczka1/fuzzy1/11729979.err
Error in line 2: 95JpDNP S953 27,7
Error in line 8: Q71oIJGKz A749 40,2
Error in line 15: n9CZ0n6IV74 A749 35,8
Error in line 25: OjCqE S953 91,7
Error in line 21: ZrGQ4G S768 84,2
